Add updateAdmin funcionality :heavy_plus_sign:
- [X] Cookie to validate if the admin is 'master' or not
- [X] Back-end routes to get admin by id and update admin
- [X] Form to update the admin's profile

Signed-off-by: Gustavo Porto Guedes <gustavo.guedes@fatec.sp.gov.br>

--- a/client/src/containers/Dashboard.css
+++ b/client/src/containers/Dashboard.css
@@ -35,6 +35,10 @@
     margin-top: 6px;
 }
 
+#Header-UsrItem {
+    cursor: pointer;
+}
+
 .Header-Logout {
     cursor: pointer;
     font-size: 15px;
